--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "lodash": "^4.17.15",
     "morgan": "~1.9.1",
+    "nodemon": "^2.0.2",
     "socket.io": "^2.3.0",
     "sweetalert2": "^9.4.3",
     "toastr": "^2.1.4",
