--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "toastr": "^2.1.4",
     "twig": "~0.10.3",
     "uuid": "^3.3.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/register": "^7.8.3"
   }
 }
