--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.1",
     "cookie": "latest",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
