--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.12.1",
+    "animate.css": "^3.7.2",
     "cookie": "latest",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
