--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "hover.css": "^2.3.2",
     "http-errors": "~1.6.3",
     "jsonfile": "^6.0.0",
     "lodash": "^4.17.15",
@@ -21,6 +22,7 @@
     "sweetalert2": "^9.4.3",
     "toastr": "^2.1.4",
     "twig": "~0.10.3",
+    "typewriter-effect": "^2.12.2",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
